[package]
name = "arithmetic_yukinari"
version = "0.1.1"
authors = ["Sei Yukinari <yukinarisei@gmail.com>"]
edition = "2021"

description = "A simple arithmetic library"
repository = "https://github.com/Sei-Yukinari/arithmetic_yukinari"
license = "MIT"

[lib]
name = "arithmetic_yukinari"
path = "src/lib.rs"

[dependencies]
